--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "social network studio project using nodejs handelbars",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "css": "npx tailwindcss -i ./public/css/tailwind.css -o ./public/css/app.css --watch",
+    "start": "npx nodemon index.js",
+    "dev": "npm-run-all -p -r css start"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "postcss-cli": "^9.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "autoprefixer": "^10.4.2",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
